Добавлено редактирование, удаление, показ преподавателей

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,4 +11,4 @@
 
 @import '~cropperjs/dist/cropper.css';
 
-//@import '~guillotine/css/jquery.guillotine.css';
+@import '~guillotine/css/jquery.guillotine.css';
