Добавлена отправка заявки, добавлена возможность вывода времени в текущей часовой зоне пользователя

--- a/public/css/admin/base/admin-base.css
+++ b/public/css/admin/base/admin-base.css
@@ -4,7 +4,7 @@ body {
 
 .bd-navbar {
     height: 68px;
-    background-color: #232a30 !important;
+    background-color: #2d3f53;
 }
 
 main {
@@ -52,7 +52,7 @@ aside.toggler {
     height: 35px;
     line-height: 35px;
     text-align: center;
-    background: #e3342f;
+    background: #2d3f53;
     /*background: #2774ac;*/
     position: absolute;
     top: 5px;
@@ -61,6 +61,16 @@ aside.toggler {
     opacity: 0;
     cursor: pointer;
 }
+
+#switchSidebar {
+    background-color: #202730;
+}
+
+.btn {
+    background-color: #202730;
+    color: #fff;
+}
+
 .cursor-pointer{
     cursor: pointer;
 }
@@ -70,7 +80,7 @@ aside.toggler {
 }
 
 .fa-external-link-alt:hover {
-    color: rgb(139,149,152);
+    color: #202730;
 }
 
 @media screen and (max-width: 767px) {
@@ -143,13 +153,12 @@ a, a:hover, a:focus {
 }
 
 aside {
-    background: #7386D5;
+    background: #202730;
     color: #fff;
 }
 
 aside .sidebar-header {
     padding: 20px;
-    background: #32373d;
     position: relative;
 }
 
@@ -168,18 +177,18 @@ aside ul li a {
     display: block;
 }
 aside ul li a:hover {
-    background-color: #e3342f;
+    background-color: #2d3f53;
 }
 
 aside ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
     /*background: #2774ac;*/
-    background-color: #e3342f;
+    background-color: #2d3f53;
 }
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #32373b;
+    background: #6f8aa9;
 }
 
 .collapse.navbar-collapse {
