--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,32 +1,19 @@
 
 .navbar {
-    background-color: #00A6B7;
-}
-
-.button {
-    background-color: #00C4CC;
-    padding: 0 2rem;
-    color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0.66rem;
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    font-size: 0.9rem;
-    line-height: 1.6;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.button-large {
-    padding: 0.3rem 2rem;
+    background-color: #2d3f53;
 }
 
 .brand {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 2rem;
+}
+
+.nav-item .nav-link:hover {
+    border-bottom: 1px solid #fff;
+}
+
+.sub-menu {
+    background-color: #202730;
 }
 
 @media screen and (min-width: 992px) {
