--- a/public/css/teacher.css
+++ b/public/css/teacher.css
@@ -7,15 +7,13 @@
     height: 200px;
 }
 
+.hint {
+    color: #a0a6ab;
+}
+
 @media screen and (max-width: 576px) {
     .teacher-photo-description {
         width: 150px;
         height: 150px;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .diplom-request {
-
     }
 }
