Добавлена возможность для студентов оставлять заявки преподавателям и отклонять их, для преподавателей добавлена возможность отклонять, подтверждать эти заявки, просматривать студентов, которые записаны к нему. Добавлена возможность для преподавателей и студентов редактировтаь свой профиль

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,13 @@ a {
     top: 2px;
 }
 
+.button:active, button:focus {
+    outline: none;
+}
+.button::-moz-focus-inner {
+    border: 0;
+}
+
 .button.disabled {
     background-color: #a0a6ab;
     pointer-events: none;
