--- a/public/css/student-profile.css
+++ b/public/css/student-profile.css
@@ -1,7 +1,3 @@
-.vocation {
-    font-size: 1.2rem;
-}
-
 .drop-shadow {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -67,6 +63,10 @@
 
 .fa-clock {
     font-size: 2rem;
+}
+
+.error {
+    color: #e06149;
 }
 
 @media screen and (min-width: 992px) {
