--- a/public/css/admin/base/admin-base.css
+++ b/public/css/admin/base/admin-base.css
@@ -138,7 +138,7 @@ a[data-toggle="collapse"] {
 /* Конец стилей выпадющего списка */
 
 /* Стили бокового меню */
-p {
+aside p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
@@ -188,7 +188,6 @@ aside ul li.active > a, a[aria-expanded="true"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6f8aa9;
 }
 
 .collapse.navbar-collapse {
