Добавлена возможность просматривать лимиты за разные года, добавлять лимиты за любые года

--- a/public/css/admin/teacher-limits.css
+++ b/public/css/admin/teacher-limits.css
@@ -26,6 +26,10 @@
     background-color: #fff;
 }
 
-input[name="year"] {
+select[name="year"] {
+    width: 60px;
+}
+
+input[name="new-year"] {
     width: 100px;
 }
