Добавлено возможность принудительного изменения или создания заявки для студентов, добавлен seeder для group_stories, изменена логика работы заявок, выводится история заявок для студентов, для заявок добавлена информация о времени отправки, времени ответа

--- a/public/css/admin/teacher-limits.css
+++ b/public/css/admin/teacher-limits.css
@@ -28,8 +28,9 @@
 
 select[name="year"] {
     width: 60px;
+    height: 29px;
 }
 
 input[name="new-year"] {
-    width: 100px;
+    width: 110px;
 }
