Работа с файлами (отображение, скачивание, загрузка, удаление)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,10 @@ a {
     color: white;
 }
 
+.fa-download {
+    color: #343a40;
+}
+
 .button {
     position: relative;
     background-color: #202730;
