--- a/public/css/admin/files.css
+++ b/public/css/admin/files.css
@@ -1,3 +1,19 @@
 .files-container {
     background-color: #fff;
 }
+.direction {
+    font-size: 1rem;
+}
+
+.course {
+    font-size: 1rem;
+}
+
+select[name="direction"] {
+    height: 29px;
+}
+
+select[name="course"] {
+    width: 40px;
+    height: 29px;
+}
