--- a/public/css/admin/teacher-applications.css
+++ b/public/css/admin/teacher-applications.css
@@ -3,6 +3,23 @@
     font-size: 1rem;
 }
 
+.year {
+    font-size: 1rem;
+}
+
+.teacher-select {
+    font-size: 1rem;
+}
+
+select[name="year"] {
+    width: 60px;
+    height: 29px;
+}
+
+select[name="teacher-select"] {
+    height: 29px;
+}
+
 .student:not(:first-child) {
     border-top: 1px solid #e7e8ec;
 }
@@ -61,10 +78,11 @@
 }
 .teacher-application-container {
     background-color: #fff;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
 }
 
-.drop-shadow {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.table td {
+    vertical-align: middle;
+    padding: 0;
 }
 
