Добавлена страница админа с указанием сроков подачи заявок, сроков  практики и общей информации по направлению и курсу; ее отображение у студентов; Исправлено: скачивание файлов у студентов; Исправлено: в заявках руководителей у админа выводились названия групп студентов, а не истории групп.

--- a/public/css/admin/practice-info.css
+++ b/public/css/admin/practice-info.css
@@ -1,4 +1,4 @@
-.files-container {
+.practice-info-container {
     background-color: #fff;
 }
 
@@ -8,6 +8,18 @@
 
 .course {
     font-size: 1rem;
+}
+
+.practice-time {
+    font-size: 1.2rem;
+}
+
+.application-time {
+    font-size: 1.2rem;
+}
+
+.practice-info {
+    font-size: 1.2rem;
 }
 
 select[name="direction"] {
