Исправлен баг на странице заявок студнтов - выводились неправильные преподаватели для прошлых годов, добавлена верстка

--- a/public/css/admin/student-applications.css
+++ b/public/css/admin/student-applications.css
@@ -28,10 +28,10 @@ select[name="status"] {
     min-width: 122px;
 }
 
-.shell {
-    min-width: 520px;
-}
-
 .student-empty {
     border-top: 1px solid #e7e8ec;
+}
+
+.shell {
+    min-width: min-content;
 }
