Исправлен баг, показывалось неправильное имя преподавателя, при нажатии на кнопку отправки заявки, когда у студента уже существует заявка в статусе 'ожидание', добавлена поддержка разрыва длинных слов в edge, ie, firefox, исправлен баг при обновлении студентов группы, когда в списке csv существует студент, который существует в бд, но не имеет группы(отчислен/закончил с дипломом)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,3 +62,9 @@ a {
     background-color: #a0a6ab;
     pointer-events: none;
 }
+
+.text-break {
+    word-break: break-all !important;
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+}
