--- a/public/css/admin/base/admin-base.css
+++ b/public/css/admin/base/admin-base.css
@@ -234,3 +234,9 @@ ul ul a {
     background-color: #a0a6ab;
     pointer-events: none;
 }
+
+.text-break {
+    word-break: break-all !important;
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+}
