--- a/public/css/admin/base/admin-base.css
+++ b/public/css/admin/base/admin-base.css
@@ -249,5 +249,15 @@ ul ul a {
     display: table;
 }
 
+.button.disabled {
+    background-color: #a0a6ab;
+    pointer-events: none;
+}
+
+.hint {
+    color: #a0a6ab;
+    font-size: 0.9rem;
+}
+
 
 
